<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:scaleType="fitCenter"
        android:layout_height="150dp"
        android:src="@drawable/gt_logo_gold"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/userTextInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userTextInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/majorTextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/userTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="username" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/majorTextInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/emailTextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/majorTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="major" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailTextInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/senioritySpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="email" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/senioritySpinner"
        android:layout_width="250dp"
        android:layout_height="50dp"
        tools:listitem="@layout/support_simple_spinner_dropdown_item"
        android:entries="@array/Seniority"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Register"
        android:layout_margin="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>