...
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:elevation="5dp">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="20sp"
            android:text="Welcome Username!"/>

...
